Backported to 1.16
Fixed Stove not opening in 1.16

More 1.16 Changes

Fixed issues with the Plate rendering items wrongly

The Book does not work

Removed Unnecessary method

Mixins use Java 8 now

Fixed duplicating plates

Fixed build and Bed crash when using a dye kit on a server

Fixed REI Integration

Finish fixing forge

Removed Todo

Fixed Light Switch

Fixed Forge errors and a bunch of crashes on Fabric

1.16 Backport - Fabric Boots, very buggy